--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "rm -rf .cache",
     "import": "node database/import-from-archive.js",
     "fetch-new-data": "node database/fetchFromApi.js",
-    "build": "npx @11ty/eleventy --quiet --pathprefix 'twitter'",
+    "build": "npx @11ty/eleventy --quiet --pathprefix 'twitter-archive'",
     "start": "npx @11ty/eleventy --quiet --serve"
   },
   "keywords": [],
