continue-on-error

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -43,6 +43,7 @@ jobs:
         run: pnpm install --frozen-lockfile --strict-peer-dependencies
 
       - run: pnpm run build
+        continue-on-error: true
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
